[package]
name = "neo4j_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
bolt-client = { version = "0.10.1", features = [ "tokio-stream" ] }
tokio = { version = "1.21.2", features = [ "full" ] }
tokio-util = { version = "0.7.4", features = [ "full" ] }
