[package]
name = "neo4j_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.4"

bolt-client = { version = "0.10", features = [ "tokio-stream" ] }
bolt-proto = "0.11.0"

actix-web = "4"

serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.85"

tokio = { version = "1.21", features = [ "full" ] }
tokio-util = { version = "0.7", features = [ "full" ] }
futures = "0.3"
